"BaSP-2022:w06-finish mail validation"

--- a/semana-06/styles/footer.css
+++ b/semana-06/styles/footer.css
@@ -6,6 +6,7 @@ footer{
     align-items: center;
     flex-direction: column;
     border-top: 3px solid #FF5500;
+    margin-bottom: 15px;
 }
 
 .foot-l{
