--- a/semana-06/views/sign-up.html
+++ b/semana-06/views/sign-up.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/8bedfba391.js" crossorigin="anonymous"></script>
-        <title>Trackgenix S.A.</title>
+        <title>Sign up to Trackgenix S.A.</title>
         <link rel="stylesheet" href="../styles/reset.css"/>
         <link rel="stylesheet" href="../styles/styles.css"/>
         <link rel="stylesheet" href="../styles/header.css"/>
@@ -40,7 +40,59 @@
                 </ul>
             </aside>
             <main>
-                
+                <section id="sign-up">
+                    <h2>Create an account</h2>
+                    <form>
+                        <div>
+                            <label>Name</label>
+                            <input class="entryform" type="text" id="name" name="name" placeholder="Name">
+                        </div>
+                        <div>
+                            <label>Last name</label>
+                            <input class="entryform" type="text" id="last-name" name="last-name" placeholder="Last Name">
+                        </div>
+                        <div>
+                            <label>Document number</label>
+                            <input class="entryform" type="number" id="dni" name="id-number" placeholder="Document number">
+                        </div>
+                        <div>
+                            <label>Date of birth</label>
+                            <input class="entryform" type="date" id="birth-date" name="birth-date" placeholder="Date">
+                        </div>
+                        <div class="email">
+                            <label>Email</label>
+                            <input class="emailform" type="email" id="email" name="email" placeholder="Email">
+                        </div>
+                        <div>
+                            <label>Phone number</label>
+                            <input class="entryform" type="number" id="phone-number" name="phone-number" placeholder="Number">
+                        </div>
+                        <div>
+                            <label>Location</label>
+                            <input class="entryform" type="text" id="location" name="location" placeholder="Location">
+                        </div>
+                        <div>
+                            <label>Address</label>
+                            <input class="entryform" type="text, number" id="address" name="address" placeholder="Address">
+                        </div>
+                        <div>
+                            <label>Postal code</code></label>
+                            <input class="entryform" type="number" id="postal-code" name="postal-code" placeholder="Postal Code">
+                        </div>
+                        <div>
+                            <label>Password</label>
+                            <input class="entryform" type="password" id="password" name="password" placeholder="Password">
+                        </div>
+                        <div>
+                            <label>Repeat password</label>
+                            <input class="entryform" type="text" id="r-password" name="r-password" placeholder="Repeat password">
+                        </div>
+                    </form> 
+                    <div class="button-conteiner">
+                        <button class="create" type="submit">Create</button>
+                        <a href="login.html">Already have an account?</a>
+                    </div>
+                </section>                
             </main>
         </div>
         <footer>
