--- a/semana-06/styles/sign-up.css
+++ b/semana-06/styles/sign-up.css
@@ -47,42 +47,6 @@ div input {
     }
 }
 
-/* #sign-up{
-    display: flex;
-    flex-direction: column;
-    margin: 3% 10%;
-
-    box-shadow: 100px, grey;
+form div span{
+    color: red;
 }
-
-h1{
-    align-self: center;
-}
-
-form{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 15px;
-}
-
-form div{
-    display: flex;
-    flex-direction: column;
-    width: 48%;
-    margin: 10px 5px;
-}
-
-div input {
-	height: 30px;
-    margin-top: 5px;
-}
-
-.email{
-    width: 100%;
-}
-
-.buttons{
-    width: 100%;
-    align-items: center;
-} */
