--- a/semana-06/views/index.html
+++ b/semana-06/views/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/8bedfba391.js" crossorigin="anonymous"></script>
         <title>Trackgenix S.A.</title>
-        <link rel="stylesheet" href="/styles/reset.css"/>
-        <link rel="stylesheet" href="/styles/styles.css"/>
-        <link rel="stylesheet" href="/styles/header.css"/>
-        <link rel="stylesheet" href="/styles/landing.css"/>
-        <link rel="stylesheet" href="/styles/sidebar.css"/>
-        <link rel="stylesheet" href="/styles/footer.css"/>
+        <link rel="stylesheet" href="../styles/reset.css"/>
+        <link rel="stylesheet" href="../styles/styles.css"/>
+        <link rel="stylesheet" href="../styles/header.css"/>
+        <link rel="stylesheet" href="../styles/landing.css"/>
+        <link rel="stylesheet" href="../styles/sidebar.css"/>
+        <link rel="stylesheet" href="../styles/footer.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
