BaSP-2022:w06- finish password validation

--- a/semana-06/views/sign-up.html
+++ b/semana-06/views/sign-up.html
@@ -56,7 +56,7 @@
                         </div>
                         <div>
                             <label>Document number</label>
-                            <input class="entryform" type="number" id="dni" name="id-number" placeholder="Document number">
+                            <input class="entryform" type="text" id="dni" name="id-number" placeholder="Document number">
                             <span class="error-dni"></span>
                         </div>
                         <div>
@@ -71,7 +71,7 @@
                         </div>
                         <div>
                             <label>Phone number</label>
-                            <input class="entryform" type="number" id="phone-number" name="phone-number" placeholder="Number">
+                            <input class="entryform" type="text" id="phone-number" name="phone-number" placeholder="Number">
                             <span class="error-cel"></span>
                         </div>
                         <div>
@@ -92,16 +92,16 @@
                         <div>
                             <label>Password</label>
                             <input class="entryform" type="password" id="password" name="password" placeholder="Password">
-                            <span class="error-"></span>
+                            <span class="error-p1"></span>
                         </div>
                         <div>
                             <label>Repeat password</label>
-                            <input class="entryform" type="text" id="r-password" name="r-password" placeholder="Repeat password">
-                            <span class="error-"></span>
+                            <input class="entryform" type="text" id="password2" name="r-password" placeholder="Repeat password">
+                            <span class="error-p2"></span>
                         </div>
                     </form> 
                     <div class="button-conteiner">
-                        <button class="create" type="submit">Create</button>
+                        <button id="button-create" class="create" type="submit">Create</button>
                         <a href="login.html">Already have an account?</a>
                     </div>
                 </section>                
