--- a/semana-06/views/login.html
+++ b/semana-06/views/login.html
@@ -52,6 +52,7 @@
                         <div class="input-conteiner">
                             <label>Password</label>
                             <input class="loginform" type="password" id="password" name="password" placeholder="Enter password">
+                            <span class="wrong"></span>
                         </div>
                         <div class="button-box">
                             <button class="buttonlog" type="submit">Login</button>
