BaSP-2022:w06- fix error in labels and button

--- a/semana-06/views/sign-up.html
+++ b/semana-06/views/sign-up.html
@@ -101,7 +101,7 @@
                         </div>
                     </form> 
                     <div class="button-conteiner">
-                        <button id="button-create" class="create" type="submit">Create</button>
+                        <button id="button-create" class="create" type="button">Create</button>
                         <a href="login.html">Already have an account?</a>
                     </div>
                 </section>                
