--- a/semana-06/views/login.html
+++ b/semana-06/views/login.html
@@ -52,10 +52,10 @@
                         <div class="input-conteiner">
                             <label>Password</label>
                             <input class="loginform" type="password" id="password" name="password" placeholder="Enter password">
-                            <span class="wrong"></span>
+                            <span class="wrongpass"></span>
                         </div>
                         <div class="button-box">
-                            <button class="buttonlog" type="submit">Login</button>
+                            <button id="button-create" class="buttonlog" type="submit">Login</button>
                         </div>
                         <div class="checkbox">
                             <input class="check-input" type="checkbox" id="rememberme" name="rememberme">
