BaSP-2022:w07-week 7 complete, because of a bug

--- a/semana-07/views/sign-up.html
+++ b/semana-07/views/sign-up.html
@@ -96,7 +96,7 @@
                         </div>
                         <div>
                             <label>Repeat password</label>
-                            <input class="entryform" type="text" id="password2" name="password2" placeholder="Repeat password">
+                            <input class="entryform" type="password" id="password2" name="password2" placeholder="Repeat password">
                             <span class="error-p2"></span>
                         </div>
                     </form> 
