BaSP-2022:w07-finish API validation

--- a/semana-07/views/login.html
+++ b/semana-07/views/login.html
@@ -55,7 +55,7 @@
                             <span class="wrongpass"></span>
                         </div>
                         <div class="button-box">
-                            <button id="button-create" class="buttonlog" type="submit">Login</button>
+                            <button id="button-create" class="buttonlog" type="button">Login</button>
                         </div>
                         <div class="checkbox">
                             <input class="check-input" type="checkbox" id="rememberme" name="rememberme">
